<resources>
    <string name="app_name">Game Play Parcels</string>
    <string name="title_home">Queue</string>
    <string name="title_news">News</string>
    <string name="title_dashboard">Games</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Account </string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="background_image">background image</string>
    <string name="Loading">Loading...</string>
    <string name="privacy_policy">By proceeding you also agree to the Terms of Service and Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_setting">Setting</string>
    <string name="dummy_about">Forza is a series of simulation racing video games for Xbox consoles, Windows 10, iOS and Android devices published by Xbox Game Studios.</string>
    <string name="PLAYSTATION">PLAYSTATION 4</string>
    <string name="XBOX_ONE">XBOX ONE</string>
    <string name="NINTENDO_SWITCH">NINTENDO SWITCH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="xbox_series_x">XBOX SERIES X</string>
    <string name="playstation_5">PlayStation 5</string>
    <string name="facebook_app_id">1646986748837990</string>
    <string name="fb_login_protocol_scheme">fb1646986748837990</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="sports">Sports</string>
    <string name="todo">TODO</string>
</resources>