<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/cd"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/account"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/controller"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/news"
        android:title="@string/title_news" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/settings"
        android:title="@string/title_setting" />

</menu>

