<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_queue"
        android:name="com.game.playparcels.ui.QueueTab.QueueFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.game.playparcels.ui.GamesTab.GamesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.game.playparcels.ui.AccountTab.AccountFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.game.playparcels.ui.SettingsTab.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/setting_fragment" />
    <fragment
        android:id="@+id/navigation_news"
        android:name="com.game.playparcels.ui.NewsTab.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/news_fragment" />


</navigation>